<resources>
    <string name="app_name">Zuku</string>
    <string name="acc">ACC.</string>
    <string name="loyalty_points">Loyalty Points</string>
    <string name="last_payment">Last Payment</string>
    <string name="select_acc">Select Account No</string>
    <string name="current_balance">Current Balance</string>
    <string name="top_Up_balance">Top Up Balance</string>
    <string name="current_plan_details">current package</string>
    <string name="internet_speed">Internet Speed</string>
    <string name="time_">Until 23 No</string>
    <string name="mbps">MBPS</string>
    <string name="day">Days</string>
    <string name="desc">Prepaid SIP Bundle 1,ASIA PREMIUM SALES PROMO ,GPON DUO CLASSIC 20</string>
    <string name="change_plan">Change Package</string>
    <string name="zuku_fiber_plans">Zuku Fiber Plans</string>
    <string name="see_all">See All</string>
    <string name="triple_play">Tripleplay</string>
    <string name="internet_only">Internet Only</string>
    <string name="office_plan">Office Plan</string>
    <string name="high_speed">High Speed</string>
    <string name="speed">Speeds</string>
    <string name="internet">internet</string>
    <string name="pay">Pay</string>
    <string name="select_package">Select Package</string>
    <string name="internet_only_package">Internet Only Package</string>
    <string name="triple_play_packages">Triple Play Packages</string>
    <string name="office_packages">Office packages</string>
    <string name="zuku_fiber_packages">Zuku Packages</string>
    <string name="close">Close</string>
    <string name="currency">KES</string>
    <string name="amount_value">KES 2,899</string>
    <string name="selection_des">Once selected it will be effective from</string>
    <string name="date_des">25 Nov 2022</string>
    <string name="zuku_payment_options">Zuku Payment Options</string>
    <string name="zuku_fiber">Zuku Fiber</string>
    <string name="zuku_tv">Zuku TV</string>
    <string name="zuku_phone_airtime">Zuku Phone Airtime</string>
    <string name="mobile_banking">Mobile Banking</string>
    <string name="direct_banking">Direct Banking</string>
    <string name="zuku_statements">Invoices</string>
    <string name="mpesa">MPESA</string>
    <string name="phone">0704****59</string>
    <string name="trans_amount">KES 50</string>
    <string name="date">20 Jan, 08:47 AM</string>
    <string name="phone_number">Phone Number</string>
    <string name="phone_number_dec">Mpesa number To top up From</string>
    <string name="finish">Finish</string>
    <string name="amount_to_pay">Amount to Pay</string>
    <string name="acc_no">Acc No. 200036895</string>
    <string name="amount_due">Amount Due:</string>
    <string name="continue_">Continue</string>
    <string name="transaction_successful">transaction successful</string>
    <string name="close_">CLOSE</string>
    <string name="message">Start typing…</string>
    <string name="send">Send</string>
    <string name="shift">Shift Request</string>
    <string name="shift_des">Address to the shifting location</string>
    <string name="shift_date">Shifting Date</string>
    <string name="ssd_password">SSD password</string>
    <string name="device">Wifi (SSID)</string>
    <string name="show_status">Status</string>
    <string name="online">Online</string>
    <string name="address">IP Address</string>
    <string name="password">Password</string>
    <string name="update">Add</string>
    <string name="download">DOWNLOAD</string>
    <string name="phone_des">Enter your phone number for verification</string>
    <string name="get_opt">Get OTP</string>
    <string name="otp_verification">OTP verification</string>
    <string name="otp_verification_des">Enter the OTP sent to 0704549859</string>
    <string name="text_did_not">Didn\'t receive the OTP.</string>
    <string name="resend">Resend OTP</string>
    <string name="timer">Timer</string>
    <string name="Verify">Verify &amp; Proceed</string>
    <string name="change_phone">Change Phone Number</string>
    <string name="select_map">Select Location from Map</string>
    <string name="title">Title</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="call">Call</string>
    <string name="info">Info</string>
    <string name="faq">FAQ</string>
    <string name="waiting">Waiting for payment..</string>
    <string name="code">Payment Code</string>
    <string name="description">Des</string>
    <string name="address_des">Drag the pin to the shifting location</string>
    <string name="submit">Submit</string>
    <string name="shifting_location">Shifting address</string>
    <string name="additional">Additional information</string>
    <string name="select_date">Select Date</string>
    <string name="payments">Payments Options</string>
    <string name="select_payment">Select Payment</string>
    <string name="twitter">Twitter</string>
    <string name="facebook">Facebook</string>
    <string name="cancel">Cancel</string>
    <string name="select">Select the payment option for your preferred service</string>
    <string name="email">Email</string>
    <string name="kra_pin">KRA PIN</string>
    <string name="search">Search my place</string>
    <string name="home">Home</string>
    <string name="invoice">Invoices</string>
    <string name="profile">Profile</string>
    <string name="more">More</string>
    <string name="add_phone">Add phone Number</string>
    <string name="add_des">Update your contact information by adding an email or phoneNumber</string>
    <string name="shop_location">Shop Locations</string>


</resources>