<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    android:background="@color/bg_greenish"
    android:orientation="vertical"
    android:id="@+id/layoutMain"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ShiftRequest">

    <ProgressBar
        android:visibility="gone"
        android:id="@+id/progress_circular"
        android:layout_marginTop="10sp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <FrameLayout
        android:layout_marginTop="60sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:contentDescription="@string/close"
            android:id="@+id/image_close"
            android:layout_marginStart="20sp"
            android:src="@drawable/arrow_left"
            android:layout_width="30sp"
            android:layout_height="30sp"
            app:tint="@color/black" />
        <TextView
            android:textColor="@color/text_color_black"
            android:layout_gravity="center"
            android:textSize="16sp"
            android:text="@string/shift"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </FrameLayout>




    <TextView
        android:textColor="@color/blue_zuku"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20sp"
        android:layout_marginStart="20dp"
        android:text="@string/shift_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:drawableTint="@color/blue_zuku"
        android:drawableRight="@android:drawable/ic_menu_my_calendar"
        android:focusable="false"
        android:id="@+id/ed_date"
        android:padding="15sp"
        android:hint="@string/select_date"
        android:background="@drawable/bg_border_main_pg"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20sp"
        android:layout_marginStart="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:textColor="@color/blue_zuku"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20sp"
        android:layout_marginStart="20dp"
        android:text="@string/shifting_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
`

    <EditText
        android:drawableTint="@color/blue_zuku"
        android:drawableRight="@android:drawable/ic_dialog_map"
        android:focusable="false"
        android:id="@+id/select_map"
        android:padding="15sp"
        android:hint="@string/select_map"
        android:background="@drawable/bg_border_main"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20sp"
        android:layout_marginStart="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


    <TextView
        android:textColor="@color/blue_zuku"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20sp"
        android:layout_marginStart="20dp"
        android:text="@string/additional"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/edDes"
        android:padding="20sp"
        android:hint="@string/message"
        android:background="@drawable/bg_border_main_blue"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20sp"
        android:layout_marginStart="20dp"
        android:layout_width="match_parent"
        android:layout_height="100sp"/>

    <ProgressBar
        android:visibility="gone"
        android:layout_marginTop="10sp"
        android:layout_gravity="center"
        android:id="@+id/progress_circular4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tv_submit"
        android:clickable="true"
        android:focusable="true"
        android:background="@drawable/indicator_state_blue_background"
        android:textColor="@drawable/indicator_state_color_button"
        android:layout_marginEnd="30sp"
        android:layout_marginStart="30sp"
        android:gravity="center"
        android:layout_marginTop="20sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="12sp"
        android:text="@string/submit"
        android:layout_width="match_parent"
        android:layout_height="40sp"
        />



</androidx.appcompat.widget.LinearLayoutCompat>