<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="70sp"
    android:background="@color/grey"
    android:id="@+id/layout_transaction"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tv_payment_type"
        android:textColor="@color/black"
        android:layout_marginTop="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="20dp"
        android:textSize="13sp"
        android:text="@string/mpesa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tv_phone"
        android:layout_marginStart="20sp"
        app:layout_constraintTop_toBottomOf="@+id/tv_payment_type"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textSize="12sp"
        android:textColor="@color/blue_zuku"
        android:text="@string/phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>



    <TextView
        android:textStyle="bold"
        android:layout_marginEnd="20sp"
        android:id="@+id/tv_amount"
        android:textColor="@color/zuku_Orange"
        android:layout_marginTop="20sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textSize="13sp"
        android:text="@string/amount_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tdate"
        android:layout_marginEnd="20sp"
        app:layout_constraintTop_toBottomOf="@+id/tv_amount"
        app:layout_constraintRight_toRightOf="parent"
        android:textSize="12sp"
        android:textColor="@color/green_zuku"
        android:text="@string/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <View
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/black"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>



</androidx.constraintlayout.widget.ConstraintLayout>