<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    android:padding="10sp"
    android:background="@drawable/bg_border"
    android:layout_gravity="center"
    android:layout_marginTop="20sp"
    android:layout_marginStart="20sp"
    android:layout_marginEnd="20sp"
    android:layout_marginBottom="20sp"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.Profile">



    <LinearLayout
        android:layout_marginBottom="5sp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textColor="@color/text_color"
            android:text="@string/show_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


        <TextView
            android:drawableTint="@color/green_zuku"
            android:drawablePadding="5sp"
            android:drawableStart="@drawable/dot"
            android:layout_marginStart="20dp"
            android:textColor="@color/text_color_black"
            android:text="@string/online"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>



    </LinearLayout>

    <LinearLayout
        android:layout_marginBottom="5sp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textColor="@color/text_color"
            android:text="@string/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


        <TextView
            android:drawablePadding="5sp"
            android:layout_marginStart="20dp"
            android:textColor="@color/text_color_black"
            android:text="173.292.9393.10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>



    </LinearLayout>

    <LinearLayout
        android:layout_marginBottom="5sp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textColor="@color/text_color"
            android:text="@string/device"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


        <EditText
            android:paddingTop="2sp"
            android:paddingBottom="2sp"
            android:paddingStart="10sp"
            android:background="@drawable/bg_border"
            android:drawablePadding="5sp"
            android:layout_marginStart="20dp"
            android:textColor="@color/text_color_black"
            android:text="Alex"
            android:layout_width="100sp"
            android:layout_height="wrap_content"/>



    </LinearLayout>

    <LinearLayout
        android:layout_marginBottom="5sp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textColor="@color/text_color"
            android:text="@string/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


        <EditText
            android:paddingTop="2sp"
            android:paddingBottom="2sp"
            android:paddingStart="10sp"
            android:background="@drawable/bg_border"
            android:drawablePadding="5sp"
            android:layout_marginStart="20dp"
            android:textColor="@color/text_color_black"
            android:text="1234567"
            android:layout_width="100sp"
            android:layout_height="wrap_content"/>



    </LinearLayout>


    <TextView
        android:id="@+id/tv_change_plan"
        android:clickable="true"
        android:focusable="true"
        android:background="@drawable/indicator_state_blue_background"
        android:textColor="@drawable/indicator_state_color_button"
        android:layout_marginEnd="30sp"
        android:layout_marginStart="30sp"
        android:gravity="center"
        android:layout_marginTop="20sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="12sp"
        android:text="@string/update"
        android:layout_width="match_parent"
        android:layout_height="40sp"
        />




</androidx.appcompat.widget.LinearLayoutCompat>