<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cl_package"
    android:layout_width="139sp"
    android:layout_height="wrap_content"
    android:layout_marginStart="20sp"
    android:layout_marginTop="20dp"
    android:layout_marginEnd="20sp"
    android:background="@drawable/bg_border_main"
    android:clickable="true"
    android:elevation="1sp"
    android:focusable="true"

    >

    <TextView
        android:id="@+id/tv_currency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20sp"
        android:layout_marginTop="20sp"
        android:text="@string/currency"
        android:textColor="@color/text_color"
        android:textSize="13sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5sp"
        android:layout_marginTop="20sp"
        android:text="@string/amount_value"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@+id/tv_currency"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_speed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20sp"
        android:layout_marginEnd="10sp"
        android:layout_marginTop="5sp"
        android:text="100"
        android:textColor="@color/green_zuku"
        android:textSize="19sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_currency" />

    <TextView
        android:layout_marginTop="5sp"
        android:layout_marginBottom="20sp"
        android:id="@+id/cableSpeeds"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20sp"
        android:layout_marginEnd="20sp"
        android:text="@string/speed"
        android:textColor="@color/zuku_Orange"
        android:textSize="10sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_speed"
        />



    <TextView
        android:layout_marginTop="5sp"
        android:layout_marginBottom="20sp"
        android:id="@+id/tvDes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20sp"
        android:layout_marginEnd="20sp"
        android:text="@string/desc"
        android:textSize="8sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cableSpeeds"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>