<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.TransactionResponse">

    <ImageView
        android:id="@+id/close"
        android:layout_marginTop="50sp"
        android:layout_marginEnd="40sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:src="@android:drawable/ic_menu_close_clear_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="330sp"
        android:layout_height="550sp"
        android:background="@drawable/bg_border_main_pg"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20sp"
            android:src="@drawable/success" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10sp"
            android:gravity="center"
            android:text="@string/zuku_fiber"
            android:textAllCaps="true"
            android:textColor="@color/text_color"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvAccNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:textAllCaps="true"
            android:textColor="@color/text_grey"
            android:textSize="12sp"
            tools:text="@string/acc_no" />


        <TextView
            android:id="@+id/tvAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20sp"
            android:gravity="center"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="38sp"
            tools:text="KES 3,200.00" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/transaction_successful"
            android:textAllCaps="true"
            android:textColor="@color/text_color"
            android:textSize="12sp" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="299sp"
            android:layout_height="142sp"
            android:layout_gravity="center"
            android:layout_marginTop="20sp"
            android:background="@drawable/bg_border_main">

            <TextView
                android:id="@+id/tvPackage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:text="@string/triple_play"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20sp"
                android:layout_marginTop="50sp"
                android:text="Date"
                android:textColor="@color/text_grey"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20sp"
                android:layout_marginTop="80sp"
                android:text="@string/email"
                android:textColor="@color/text_grey"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/tvSPeed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50sp"
                android:layout_marginEnd="20sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="20 Bmps" />

            <TextView
                android:id="@+id/paymentCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="80sp"
                android:layout_marginEnd="20sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/zuku_tv" />


        </androidx.constraintlayout.widget.ConstraintLayout>


        <TextView
            android:id="@+id/btn_download"
            android:layout_width="match_parent"
            android:layout_height="48sp"
            android:layout_marginStart="20sp"
            android:layout_marginTop="40sp"
            android:layout_marginEnd="20sp"
            android:background="@drawable/indicator_state_blue_background"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:text="@string/download"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:visibility="visible" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>