<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.ShiftingMap">

    <LinearLayout
        android:background="@color/white"
        android:id="@+id/toolbar"
        android:elevation="5dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textColor="@color/text_color_black"
            android:layout_marginTop="40sp"
            android:gravity="center"
            android:text="@string/address_des"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tvAddress"
            android:layout_marginBottom="10sp"
            android:textColor="@color/text_color_black"
            android:gravity="center"
            tools:text="@string/address_des"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:drawableTint="@color/black"
            android:padding="10dp"
            android:drawableEnd="@drawable/search"
            android:background="@color/white"
            android:importantForAutofill="no"
            android:inputType="textFilter|textMultiLine"
            android:textColorHint="@color/text_color_black"
            android:textStyle="bold"
            android:textColor="@color/text_color_black"
            android:id="@+id/et_search_bar"
            android:textSize="15sp"
            android:hint="@string/search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_marginTop="15sp"
            android:layout_marginEnd="20sp"
            android:layout_marginStart="20sp"
            app:layout_constraintTop_toBottomOf="@+id/linear"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:id="@+id/rv_place_results"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            />

    </LinearLayout>

    <ImageView
        android:elevation="5dp"
        android:layout_gravity="center"
        android:src="@drawable/image_pin"
        android:layout_width="50sp"
        android:layout_height="50sp"/>

            <fragment
            class="com.google.android.gms.maps.SupportMapFragment"
            android:id="@+id/map_fragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    <TextView
        android:layout_gravity="bottom"
        android:elevation="5dp"
        android:layout_marginBottom="60sp"
        android:id="@+id/tv_submit"
        android:clickable="true"
        android:focusable="true"
        android:background="@drawable/indicator_state_blue_background"
        android:textColor="@drawable/indicator_state_color_button"
        android:layout_marginEnd="30sp"
        android:layout_marginStart="30sp"
        android:gravity="center"
        android:textSize="12sp"
        android:text="@string/submit"
        android:layout_width="match_parent"
        android:layout_height="40sp"
        />

</FrameLayout>